# rust-bin-template

./: Cargo.toml  cargo-generate.toml  clippy.toml
.cargo/: config.toml
src/: main.rs
